--- a/tests/source/rules_var/.README.md
+++ b/tests/source/rules_var/.README.md
@@ -282,6 +282,21 @@ var (
 
 ## 🔄 Scénarios de Test
 
+**Principe d'isolation** : "Tout parfait SAUF l'erreur testée"
+
+Chaque cas de test est conçu pour déclencher **UNIQUEMENT** l'erreur spécifique testée, sans erreurs parasites provenant d'autres règles. Cette isolation garantit que les tests sont précis et fiables.
+
+**Résultats actuels** : 51 erreurs isolées détectées
+- KTN-VAR-001 : 14 erreurs (variables non groupées)
+- KTN-VAR-002 : 2 erreurs (groupes sans commentaire)
+- KTN-VAR-003 : 3 erreurs (variables sans commentaire individuel)
+- KTN-VAR-004 : 19 erreurs (variables sans type explicite)
+- KTN-VAR-005 : 1 erreur (devrait être une constante)
+- KTN-VAR-006 : 1 erreur (multiple variables sur une ligne)
+- KTN-VAR-007 : 2 erreurs (channels sans buffer size)
+- KTN-VAR-008 : 5 erreurs (noms avec underscore)
+- KTN-VAR-009 : 5 erreurs (noms en ALL_CAPS)
+
 | # | Scénario | Fichier | Résultat attendu |
 |---|----------|---------|------------------|
 | 1 | Variables non groupées | package-level.go:4-6 | ❌ KTN-VAR-001 |
